--- a/src/sass/components/_single-project.scss
+++ b/src/sass/components/_single-project.scss
@@ -43,8 +43,13 @@
                 a {
                     text-align: center;
                     @include button-blue;
-                    @include buttonHover;
                     padding: 8px 10px 15px;
+                    
+                    @media (hover: hover) {
+                        &:hover {
+                            @include button-yellow;
+                        }
+                    }
                 }
             }
         }
