--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -50,6 +50,7 @@
                 justify-items: center;
                 align-items: center;
                 font-size: 12px;
+                font-weight: 500;
                 transition: 0.2s ease;
 
                 &:hover {
