changed helmet library

--- a/src/sass/components/_project-slider.scss
+++ b/src/sass/components/_project-slider.scss
@@ -68,7 +68,8 @@
     }
 
     .slick-prev:before {
-        content: "🠔";
+        content: "\02ff"; 
+        // 2192, 2190
     }
 
     .slick-next:before {
