--- a/src/sass/components/_project-slider.scss
+++ b/src/sass/components/_project-slider.scss
@@ -9,7 +9,7 @@
         position: relative;
 
         .image-container {
-            filter: brightness(35%);  
+            filter: brightness(55%);  
             transition: 0.3s ease-in-out;
         }
         
@@ -68,19 +68,19 @@
     }
 
     .slick-prev:before {
-        content: "\02ff"; 
-        // 2192, 2190
+        content: "\2039"; 
     }
 
     .slick-next:before {
-        content: "🠖";
+        content: "\203A";
     }
 
     .slick-prev:before,
     .slick-next:before {
-        font-size: 25px;
+        font-size: 30px;
         color: $content;
         @include centerElement;
+        top: 35%;
     }
 
     .slick-prev,
@@ -92,10 +92,8 @@
         height: 35px;
         transition: 0.3s ease;
 
-        @media (hover: hover) {
-            &:hover {
-                background-color: rgb(79 209 197 / 65%);
-            }
+        &:hover {
+            background-color: rgb(79 209 197 / 65%);
         }
     }
 
@@ -124,8 +122,8 @@
     
         .slick-prev:before,
         .slick-next:before {
-            font-size: 30px;
-            top: 47%; 
+            font-size: 40px;
+            // top: 32%; 
         }
     }
 }
