changed logo to png

--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -53,7 +53,8 @@
             }
             
             // tab underline
-            .css-1aquho2-MuiTabs-indicator {
+            .css-1aquho2-MuiTabs-indicator,
+            .css-ttwr4n {
                 background-color: transparent;
             }
         }
