added animation to stars

--- a/src/sass/generic/_global.scss
+++ b/src/sass/generic/_global.scss
@@ -41,11 +41,37 @@ body {
 
         .star {
             position: absolute;
-            width: 2px; 
-            height: 2px;
+            width: 1px; 
+            height: 1px;
             background-color: white; 
             border-radius: 50%;
             filter: blur(1px);
+            box-shadow: 0 0 5px 0.5px white;
+        }
+
+        .blink {
+            animation: blink 5s infinite;
+        }
+        
+        @keyframes blink {
+            0%, 100% { opacity: 1; }
+            50% { opacity: 0; }
+        }
+
+        &.lighted {
+            .star {
+                width: 3px; 
+                height: 3px;
+                background-color: $bgc-btn-yellow; 
+                box-shadow: 0 0 7px 1px #8ff0e7;
+                // animation: twinkling 10s infinite linear; 
+            }
+
+            // @keyframes twinkling {
+            //     0% { opacity: 0.2; }
+            //     50% { opacity: 1; }
+            //     100% { opacity: 0.2; }
+            // }
         }
     }
     
