--- a/src/sass/generic/_mixins.scss
+++ b/src/sass/generic/_mixins.scss
@@ -34,7 +34,7 @@
 
 // Card background style
 @mixin cardBackground {
-    background: rgba(46, 53, 61, 0.8705882353);
+    background: rgb(46, 53, 61);
     border: 1px solid rgba(62, 72, 83, 0.44);
     border-radius: 8px;
     box-shadow: 0 -2px 17px 5px rgba(46, 53, 61, 0.870588235)
